pushing things for tonight, lots of bugs squashed

--- a/game.css
+++ b/game.css
@@ -522,6 +522,10 @@ html, body {
     display: none;
 }
 
+#actionPopupButton{
+    display: none;
+}
+
 
 
 
@@ -1274,8 +1278,8 @@ html, body {
 
 #dice_image{
     /*div sizing in here*/
-    width: 400px;
-    height: 400px;
+    width: 70%;
+    height: 70%;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     margin-left: 5%;
